fixed bug with white space at top

--- a/public/stylesheets/additional.css
+++ b/public/stylesheets/additional.css
@@ -11,3 +11,5 @@ body {
 	padding-top: 30px;
 	padding-left: 50%;
 }
+
+.input-xmini{width:40px;}
